# test_z

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  PROGRESS.md  README.md  pyproject.toml  workflow-schema.html
app/: main.py
app/api/: routes.py  schemas.py  sse.py
app/catalog/: facets.py  ingest.py  models.py  repository.py
app/chat/: greeting.py  judge.py  service.py
app/core/: config.py  errors.py  logging.py  tracing.py
app/llm/: client.py  prompts.py
app/retrieval/: base.py  bm25.py  embedder.py  factory.py  hybrid.py
app/ui/: __init__.py
app/ui/static/: index.html
docs/: README.md  code-workflow-schema.html
docs/adr/: 0001-bm25-first-retrieval-behind-a-seam.md  0002-two-model-split-judge-and-generator.md  0003-hybrid-semantic-retrieval.md
docs/specs/assistant/: 2026-07-10-ingestion-review-design.md  2026-07-10-ingestion-review.plan.md  PRD.md  ingest-pipeline.plan.md
docs/specs/assistant/issues/: 01-walking-skeleton.md  02-ingest-and-retrieval.md  03-grounded-generation.md  04-judge-guardrail.md  05-readme-and-submission-polish.md
docs/specs/conversation/: 2026-07-11-conversational-improvements-design.md
docs/specs/streaming/: 2026-07-10-chat-sse-streaming-design.md  2026-07-10-chat-sse-streaming.plan.md
docs/specs/web-ui/: 2026-07-10-web-ui-design.md  2026-07-10-web-ui.plan.md
evals/: README.md  golden_set.json  run_eval.py
scripts/: README.md  smoke.sh
tests/: conftest.py  helpers.py  test_api.py  test_bm25.py  test_chat_service.py  test_config.py  test_embedder.py  test_errors.py  test_eval_runner.py  test_facets.py  test_factory.py  test_greeting.py  test_hybrid.py  test_ingest.py  test_judge.py  test_logging.py  test_ollama_client.py  test_prompts.py  test_repository.py  test_scaffold.py  test_sse.py  test_startup.py  test_tracing.py  test_ui.py
