[project]
name = "assistant"
version = "0.1.0"
description = "Assistant PoC — Site-scoped RAG chatbot API over a pet-supplies product catalog"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "rank-bm25>=0.2.2",
    "arize-phoenix-otel>=0.16",
    "openinference-semantic-conventions>=0.1",
    "opentelemetry-api>=1.20",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "opentelemetry-sdk>=1.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4", "RUF"]
